# api-llm-ocr

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
swift_ocr/: __init__.py  __main__.py  app.py
swift_ocr/api/: __init__.py  deps.py  exceptions.py  router.py
swift_ocr/api/routes/: __init__.py  health.py  ocr.py
swift_ocr/config/: __init__.py  settings.py
swift_ocr/core/: __init__.py  exceptions.py  logging.py  retry.py
swift_ocr/schemas/: __init__.py  ocr.py
swift_ocr/services/: __init__.py  ocr.py  pdf.py
